--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ FULL SCREEN MODE: http://salehriaz.com/404Page/404.html
 
 DRIBBBLE: https://dribbble.com/shots/4330167-404-Page-Lost-In-Space
 -->
-
+<link rel="stylesheet" type="text/css" href="404.css">
 <body class="bg-purple">
         
         <div class="stars">
