--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic' rel='stylesheet' type='text/css'>
-
+<link rel="stylesheet" type="text/css" href="style.css">
 <!-- MAIN CONTAINER -->
 		<div id="main_container">
       <!-- HEADER -->
