--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <title>Personal Portfolio Template</title>
+  <title>Erfan's Web Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Template css Files -->
@@ -38,7 +38,7 @@
       <div class="aside-inner">
         <!-- Logo -->
         <div class="logo">
-          <a href="#">Upvesh</a>
+          <a href="https://erfanium-79.github.io/">Erfan</a>
         </div>
         <!-- Nav -->
         <ul class="nav">
@@ -50,9 +50,6 @@
           <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
         </ul>
         <!-- Copyright -->
-        <div class="copyright-text">
-          &copy; 2020 The WebShala Template
-        </div>
       </div>
     </div>
     <!-- Aside End -->
@@ -64,13 +61,16 @@
         <div class="container">
           <div class="intro">
             <img src="images/about.jpg" alt="profile" class="shadow-dark">
-            <h1>Upvesh Kumar</h1>
+            <h1>Erfan Nasiri</h1>
             <span class="iTyped"></span>
             <div class="social-links">
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a href="https://github.com/Erfanium-79"><i class="fa fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/erfannnasiri/"><i class="fa fa-linkedin"></i></a>
+              <a href="mailto:erfan.nassirri@gmail.com"><i class="fa fa-envelope"></i></a>
+              <a href="tel:+989300460503"><i class="fa fa-phone"></i></a>
             </div>
           </div>
         </div>
@@ -87,10 +87,10 @@
           </div>
           <div class="row">
             <div class="about-content padd-15">
-              <div class="row">
+              <div class="row">   
                 <div class="about-text padd-15">
-                  <h3>I'm Upvesh Kumar and <span>Web Developer</span></h3>
-                  <p>Hi! My name is Upvesh Kumar. I am a Web Developer, and I'm very passionate and dedicated
+                  <h3>I'm Erfan Nasiri and <span>Web Developer</span></h3>
+                  <p>Hi! My name is Erfan Nasiri. I am a Web Developer, and I'm very passionate and dedicated
                     to my work. With 10 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration. </p>
                 </div>
               </div>
@@ -98,22 +98,22 @@
                 <div class="personal-info padd-15">
                   <div class="row">
                     <div class="info-item padd-15">
-                      <p>Birthday : <span>5 June 1992</span></p>
+                      <p>Birthday : <span>26 Jan 2001</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Age : <span>28</span></p>
+                      <p>Age : <span>24</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Website : <span>www.domain.com</span></p>
+                      <p>Website : <span>erfanium-79.github.io</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Email : <span>info@gmail.com</span></p>
+                      <p>Email : <span>erfan.nassirri@gmail.com</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Degree : <span>M.Tech</span></p>
+                      <p>Degree : <span>B.Sc</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Phone : <span>+91 8800 000 000</span></p>
+                      <p>Phone : <span>+98 930 046 0503</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>City : <span>Mumbai</span></p>
@@ -124,7 +124,7 @@
                   </div>
                   <div class="row">
                     <div class="buttons padd-15">
-                      <a href="#" class="btn">Download Cv</a>
+                      <a href="files\CV2.pdf" class="btn">Download Cv</a>
                       <a href="#contact" data-section-index="1" class="btn hire-me">Hire me</a>
                     </div>
                   </div>
