بده بره فقط دهنمو سویس کرد لعنتی، همین طوری باشه یکم فرانت یاد بگیرم ببینیم چی میشه.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="pt-br">
 
 <head>
-  <title>Erfan's Web Page</title>
+  <title>Erfan Nasiri</title>
+  <link rel="icon" type="image/png" href="images/batman3.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Template css Files -->
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css"> <!--this does not support new twitter logo so i replaced it with the one below-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
   <!-- Live Style Switcher - Demo Only -->
   <link rel="stylesheet" class="alternate-style" title="pink" href="css/skins/pink.css" type="text/css">
@@ -44,9 +46,10 @@
         <ul class="nav">
           <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
           <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
-          <li><a href="#services"><i class="fa fa-list"></i> Services</a></li>
-          <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-          <li><a href="#blog"><i class="fa fa-envelope"></i> Blog</a></li>
+          <!-- <li><a href="#services"><i class="fa fa-list"></i> skills</a></li> -->
+          <!-- <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Projects</a></li> -->
+          <!-- <li><a href="#publications" class="nav-link"><i class="fa fa-file-text"></i>Publications</a></li> -->
+          <!-- <li><a href="#blog"><i class="fa fa-envelope"></i> Blog</a></li> -->
           <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
         </ul>
         <!-- Copyright -->
@@ -62,15 +65,29 @@
           <div class="intro">
             <img src="images/about.jpg" alt="profile" class="shadow-dark">
             <h1>Erfan Nasiri</h1>
-            <span class="iTyped"></span>
+            <!-- <span class="iTyped"></span> -->
+            <!-- <span class="subtitle">The world only makes sense if you force it to.</span> -->
+            <!-- <span class="subtitle quote">The world only makes sense when you force it to.</span> -->
+           
+            <blockquote class="quote">
+              “The world only makes sense when you force it to.”
+              <footer>— <cite>Batman</cite></footer>
+            </blockquote>
+
             <div class="social-links">
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="https://github.com/Erfanium-79"><i class="fa fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/erfannnasiri/"><i class="fa fa-linkedin"></i></a>
+              <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+              <a href="https://x.com/nasiri_erfan"><i class="fa-brands fa-x-twitter"></i></a>
+              <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <!-- <a href="#"><i class="fa fa-instagram"></i></a> -->
+              <a href="https://www.instagram.com/erfan_nasirri/"><i class="fa-brands fa-instagram"></i></a>
+              <!-- <a href="https://github.com/Erfanium-79"><i class="fa fa-github"></i></a> -->
+              <a href="https://github.com/Erfanium-79"><i class="fa-brands fa-github"></i></a>
+              <!-- <a href="https://www.linkedin.com/in/erfannnasiri/"><i class="fa fa-linkedin"></i></a> -->
+              <a href="https://www.linkedin.com/in/erfannnasiri/"><i class="fa-brands fa-linkedin-in"></i></a>
               <a href="mailto:erfan.nassirri@gmail.com"><i class="fa fa-envelope"></i></a>
               <a href="tel:+989300460503"><i class="fa fa-phone"></i></a>
+              <a href="https://www.kaggle.com/erfannnn"><i class="fa-brands fa-kaggle"></i></a>
             </div>
           </div>
         </div>
@@ -89,16 +106,16 @@
             <div class="about-content padd-15">
               <div class="row">   
                 <div class="about-text padd-15">
-                  <h3>I'm Erfan Nasiri and <span>Web Developer</span></h3>
-                  <p>Hi! My name is Erfan Nasiri. I am a Web Developer, and I'm very passionate and dedicated
-                    to my work. With 10 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration. </p>
+                  <h3>I'm Erfan Nasiri and <span>I am a computer engineer</span></h3>
+                  <p>Hi! My name is Erfan Nasiri. I am a ML engineer, and I'm very passionate and dedicated
+                    to my work. I am interested in deep learning and NLP. </p>
                 </div>
               </div>
               <div class="row">
                 <div class="personal-info padd-15">
                   <div class="row">
                     <div class="info-item padd-15">
-                      <p>Birthday : <span>26 Jan 2001</span></p>
+                      <p>Birthday : <span>25 Jan 2001</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Age : <span>24</span></p>
@@ -116,7 +133,7 @@
                       <p>Phone : <span>+98 930 046 0503</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>City : <span>Mumbai</span></p>
+                      <p>City : <span>Tehran</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Freelance : <span>Available</span></p>
@@ -125,18 +142,18 @@
                   <div class="row">
                     <div class="buttons padd-15">
                       <a href="files\CV2.pdf" class="btn">Download Cv</a>
-                      <a href="#contact" data-section-index="1" class="btn hire-me">Hire me</a>
+                      <!-- <a href="#contact" data-section-index="1" class="btn hire-me">Hire me</a> -->
                     </div>
                   </div>
                 </div>
-                <div class="skills padd-15">
+                <!-- <div class="skills padd-15">
                   <div class="row">
                     <div class="skill-item padd-15">
-                      <h5>Javascript</h5>
+                      <h5>IELTS score (overal)</h5>
                       <div class="progress">
-                        <div class="progress-in" style="width: 76%;"></div>
+                        <div class="progress-in" style="width: 10%;"></div>
                         <div class="skill-porcent">
-                          76%
+                          7.5
                         </div>
                       </div>
                     </div>
@@ -168,85 +185,9 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
-
-              <div class="row">
-                <div class="education padd-15">
-                  <h3 class="title">Education</h3>
-                  <div class="row">
-                    <div class="timeline-box padd-15">
-                      <div class="timeline shadow-dark">
-                        <!-- timeline Item -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015</h6>
-                          <h4 class="timeline-title">Master In Computer Science</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non
-                            nisi semper, et elementum lorem ornare.</p>
                         </div>
-                        <!-- timeline Item End -->
-                        <!-- timeline Item -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2011 - 2013</h6>
-                          <h4 class="timeline-title">Studied At Delhi University</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non
-                            nisi semper, et elementum lorem ornare.</p>
-                        </div>
-                        <!-- timeline Item End -->
-                        <!-- timeline Item -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2008 - 2011</h6>
-                          <h4 class="timeline-title">Bachelor Degree</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non
-                            nisi semper, et elementum lorem ornare.</p>
-                        </div>
-                        <!-- timeline Item End -->
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="experience padd-15">
-                  <h3 class="title">Experience</h3>
-                  <div class="row">
-                    <div class="timeline-box padd-15">
-                      <div class="timeline shadow-dark">
-                        <!-- timeline Item -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015</h6>
-                          <h4 class="timeline-title">Backend Developer</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non
-                            nisi semper, et elementum lorem ornare.</p>
-                        </div>
-                        <!-- timeline Item End -->
-                        <!-- timeline Item -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2011 - 2013</h6>
-                          <h4 class="timeline-title">Frontend Developer</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non
-                            nisi semper, et elementum lorem ornare.</p>
-                        </div>
-                        <!-- timeline Item End -->
-                        <!-- timeline Item -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2008 - 2011</h6>
-                          <h4 class="timeline-title">Graphic Designer</h4>
-                          <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non
-                            nisi semper, et elementum lorem ornare.</p>
-                        </div>
-                        <!-- timeline Item End -->
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
           </div>
         </div>
       </section>
@@ -257,7 +198,7 @@
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
-              <h2>Services</h2>
+              <h2>skills</h2>
             </div>
           </div>
           <div class="row">
