edited commit messages

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+
 <head>
   <title>Erfan Nasiri</title>
-  <link rel="icon" type="image/png" href="images/batman3.png">
+  <!-- <link rel="icon" type="image/png" href="images/batman3.png"> -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Template css Files -->
-  <link rel="stylesheet" href="css/style.css" type="text/css"> <!-- this does not support new twitter logo so i replaced it with the one below -->
+  <!-- Font Awesome CDN - Add this line -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <!-- Template css Files -->
+  <link rel="stylesheet" href="css/style.css" type="text/css">
 
   <!-- Live Style Switcher - Demo Only -->
   <link rel="stylesheet" class="alternate-style" title="pink" href="css/skins/pink.css" type="text/css">
